--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- External CSS -->
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 font-sans">
+<body x-data="infographicData()" class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 font-sans">
   <div class="container mx-auto p-4 md:p-8">
     <!-- Theme Toggle Button -->
     <div class="flex justify-end mb-4">
