--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" x-data="themeToggle()" :class="{ 'dark': isDark }">
+<html lang="en" x-data="{ ...themeToggle(), ...infographicData() }" :class="{ dark: isDark }">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,7 +20,7 @@
   <!-- External CSS -->
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body x-data="infographicData()" class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 font-sans">
+<body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 font-sans">
   <div class="container mx-auto p-4 md:p-8">
     <!-- Theme Toggle Button -->
     <div class="flex justify-end mb-4">
