--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" x-data="{ ...themeToggle(), ...infographicData() }" :class="{ dark: isDark }">
+<html lang="en" x-data="infographicApp()" x-init="$watch('isDark', val => document.documentElement.classList.toggle('dark', val))">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
